--- a/index.html
+++ b/index.html
@@ -1,14 +1,227 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitor Rebello - Portfólio</title>
-    <link rel="stylesheet" href="style.css"> <!-- Se você tiver um arquivo CSS -->
+    <title>Portfólio - Vitor Rebello</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Você pode adicionar um arquivo CSS externo -->
+    <style>
+        /* Estilos básicos em linha */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+        header, footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: #fff;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h1 {
+            font-size: 2em;
+        }
+        h2 {
+            margin-top: 1em;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 5px;
+        }
+        .content-section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        ul {
+            padding-left: 20px;
+        }
+        a {
+            color: #333;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #0077b6;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao meu Portfólio!</h1>
-    <p>👋 Olá! Sou Vitor Rebello, Especialista em Infraestrutura...</p>
-    <!-- Aqui você pode adicionar mais conteúdo e projetos -->
+
+<header>
+    <h1>Vitor Rebello</h1>
+    <p>Especialista em Infraestrutura de TI | SRE | Observabilidade | Segurança da Informação</p>
+</header>
+
+<div class="container">
+    <section class="content-section">
+        <h2>Sobre Mim</h2>
+        <p>Especialista em Infraestrutura de TI com forte atuação em Observabilidade e SRE. Experiência com Zabbix e Grafana, desenvolvendo dashboards que oferecem visibilidade em tempo real e monitoramento de KPIs críticos para garantir a disponibilidade de serviços e a segurança da infraestrutura.</p>
+        <ul>
+            <li><strong>SRE e Observabilidade:</strong> Configuração de monitoramento com Zabbix e Grafana, criação de dashboards para análise de desempenho.</li>
+            <li><strong>Administração de Redes e Segurança:</strong> Experiência com firewalls (Fortigate), switches, VPNs e monitoramento de redes LAN, WAN e Wi-Fi.</li>
+            <li><strong>Gerenciamento de Bancos de Dados:</strong> DBA para Oracle, SQL Server e Progress, com foco em alta disponibilidade.</li>
+            <li><strong>Virtualização e Backup:</strong> Gestão de ambientes virtualizados com VMware vSphere e backup com Veeam Backup & Replication.</li>
+        </ul>
+    </section>
+
+    <section class="content-section">
+        <h2>Projetos</h2>
+        <h3>1. Monitoramento de Infraestrutura com Zabbix</h3>
+        <p><strong>Descrição:</strong> Implementação de monitoramento avançado para servidores e redes utilizando Zabbix, com alertas e dashboards personalizados.</p>
+        <p><strong>Tecnologias:</strong> Zabbix, Grafana, Python</p>
+
+        <h3>2. Dashboard de Observabilidade em Grafana</h3>
+        <p><strong>Descrição:</strong> Dashboard interativo em Grafana para monitoramento de redes e análise de KPIs em tempo real, permitindo ajuste de capacidade e melhorias de desempenho.</p>
+        <p><strong>Tecnologias:</strong> Grafana, Prometheus</p>
+    </section>
+
+    <section class="content-section">
+        <h2>Experiência Profissional</h2>
+        <h3>Especialista em Infraestrutura - Unimed Araraquara</h3>
+        <p><em>Novembro de 2023 - Presente</em></p>
+        <p>Responsável por redes, segurança, virtualização e monitoramento, com foco em confiabilidade e desempenho de serviços.</p>
+
+        <h3>Analista de Infraestrutura Sênior - Unimed Araraquara</h3>
+        <p><em>Março de 2021 - Novembro de 2023</em></p>
+        <p>Supervisão de ambientes virtualizados, implementação de políticas de segurança e monitoramento contínuo de KPIs para análise de desempenho.</p>
+
+        <h3>Analista de Infraestrutura Pleno - Unimed Araraquara</h3>
+        <p><em>Setembro de 2018 - Março de 2021</em></p>
+        <p>Administração de redes LAN/WAN, segurança com firewalls e desenvolvimento de dashboards de monitoramento.</p>
+    </section>
+
+    <section class="content-section">
+        <h2>Contato</h2>
+        <p><strong>Email:</strong> <a href="mailto:viitor.rebello@live.com">viitor.rebello@live.com</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vitor-rebello/" target="_blank">Vitor Rebello</a></p>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2024 Vitor Rebello. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículo de Vitor Rebello</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        h1, h2, h3 {
+            color: #444;
+            border-bottom: 2px solid #f4f4f4;
+        }
+        .section {
+            margin-top: 20px;
+        }
+        .skills, .projects, .education {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>Vitor Rebello</h1>
+
+    <section class="section skills">
+        <h2>Habilidades</h2>
+        <ul>
+            <li>SRE e Observabilidade (Zabbix e Grafana)</li>
+            <li>KPIs, SLAs e Métricas de Performance</li>
+            <li>Docker e Kubernetes</li>
+            <li>VMware vSphere</li>
+            <li>DBA (Oracle, Progress, SQL Server)</li>
+            <li>Segurança da Informação</li>
+            <li>Veeam Backup & Replication</li>
+            <li>Windows Server 2012 a 2022</li>
+            <li>Linux Server</li>
+            <li>Scripts: PowerShell, Python e Shell Script</li>
+            <li>Kaspersky Cloud e Bitdefender</li>
+            <li>Sistemas Tasy Philips e Totvs Datasul</li>
+            <li>Trabalho em equipe</li>
+            <li>Resolução de problemas</li>
+            <li>Comunicativo</li>
+            <li>Gestão de projetos</li>
+            <li>ITIL4 e ITSM</li>
+        </ul>
+    </section>
+
+    <section class="section projects">
+        <h2>Projetos</h2>
+        <h3>Implantação Zabbix & Grafana</h3>
+        <p><strong>Associado(s) a:</strong> Unimed Araraquara</p>
+        <p>Iniciado há quatro anos com a versão 4 do Zabbix Server e atualmente na versão 7, o projeto evoluiu para atender à demanda por monitoramento e visibilidade. A infraestrutura abrange mais de 570 hosts, 16.445 itens monitorados e 10.788 triggers, com alertas automáticos via API Bot e e-mail.</p>
+        <ul>
+            <li><strong>Bancos de Dados:</strong> Oracle, Progress e SQL Server</li>
+            <li><strong>Servidores:</strong> Windows Server e Linux</li>
+            <li><strong>Aplicações e Serviços:</strong> Tomcat e serviços essenciais</li>
+            <li><strong>Equipamentos de Imagem:</strong> Ressonância magnética, tomografia, ultrassom, RX e Netpacs Animati</li>
+            <li><strong>Redes:</strong> Switches, APs, impressoras</li>
+            <li><strong>Controle de Temperatura e Nobreak:</strong> Data centers e ambientes críticos</li>
+            <li><strong>Blade Dell Unit e Storage:</strong> Desempenho e integridade</li>
+        </ul>
+        <p>Com dashboards no Grafana, o projeto proporciona visibilidade para análise de KPIs e suporte a decisões estratégicas em tempo real, consolidando-se como uma solução robusta para a continuidade operacional da infraestrutura de TI.</p>
+        
+        <h3>Instrutor de Curso de Inclusão Digital – Programa Felix</h3>
+        <p>Ministrado em parceria com Unimed Araraquara, Unimed Fesp e Lar Escola Redenção, capacitando alunos em informática básica, reduzindo a exclusão digital e melhorando a empregabilidade e participação social.</p>
+
+        <h3>Migração Tasy Delphi para Tasy Java</h3>
+        <p>Projeto de migração do sistema Tasy, atualmente para Tasy HTML5, com foco na implementação do CPOE e uso de contêineres Docker para modernização contínua e facilidade de atualizações no AppManager Philips.</p>
+    </section>
+
+    <section class="section education">
+        <h2>Formação Acadêmica</h2>
+        <h3>Faculdades Integradas de Araraquara (Faculdades Logatti)</h3>
+        <p>Bacharelado em Sistemas de Informação, jan de 2015 - dez de 2019</p>
+        <ul>
+            <li>Desenvolvimento de Software</li>
+            <li>Gestão de Projetos e Negócios</li>
+            <li>Banco de Dados e Análise de Dados</li>
+            <li>Redes e Segurança da Informação</li>
+        </ul>
+
+        <h3>Senac São Paulo</h3>
+        <p>Curso Técnico Integrado em Tecnologia da Informação, jan de 2011 - nov de 2013</p>
+        <ul>
+            <li>Manutenção de hardware e software</li>
+            <li>Programação e desenvolvimento</li>
+            <li>Suporte técnico e redes</li>
+        </ul>
+    </section>
+</div>
+
 </body>
 </html>
