--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Você pode adicionar um arquivo CSS externo -->
     <style>
         /* Estilos básicos em linha */
         body {
@@ -30,7 +29,8 @@
             color: #333;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
+            margin-bottom: 10px;
         }
         h2 {
             margin-top: 1em;
@@ -39,13 +39,14 @@
         }
         .content-section {
             margin-bottom: 20px;
-            padding: 15px;
+            padding: 20px;
             background: #fff;
-            border-radius: 5px;
+            border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         ul {
             padding-left: 20px;
+            list-style-type: disc;
         }
         a {
             color: #333;
@@ -53,6 +54,13 @@
         }
         a:hover {
             color: #0077b6;
+        }
+        .section-title {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .experience-item, .education-item {
+            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -66,97 +74,70 @@
 <div class="container">
     <section class="content-section">
         <h2>Sobre Mim</h2>
-        <p>Especialista em Infraestrutura de TI com forte atuação em Observabilidade e SRE. Experiência com Zabbix e Grafana, desenvolvendo dashboards que oferecem visibilidade em tempo real e monitoramento de KPIs críticos para garantir a disponibilidade de serviços e a segurança da infraestrutura.</p>
-        <ul>
-            <li><strong>SRE e Observabilidade:</strong> Configuração de monitoramento com Zabbix e Grafana, criação de dashboards para análise de desempenho.</li>
-            <li><strong>Administração de Redes e Segurança:</strong> Experiência com firewalls (Fortigate), switches, VPNs e monitoramento de redes LAN, WAN e Wi-Fi.</li>
-            <li><strong>Gerenciamento de Bancos de Dados:</strong> DBA para Oracle, SQL Server e Progress, com foco em alta disponibilidade.</li>
-            <li><strong>Virtualização e Backup:</strong> Gestão de ambientes virtualizados com VMware vSphere e backup com Veeam Backup & Replication.</li>
-        </ul>
-    </section>
-
-    <section class="content-section">
-        <h2>Projetos</h2>
-        <h3>1. Monitoramento de Infraestrutura com Zabbix</h3>
-        <p><strong>Descrição:</strong> Implementação de monitoramento avançado para servidores e redes utilizando Zabbix, com alertas e dashboards personalizados.</p>
-        <p><strong>Tecnologias:</strong> Zabbix, Grafana, Python</p>
-
-        <h3>2. Dashboard de Observabilidade em Grafana</h3>
-        <p><strong>Descrição:</strong> Dashboard interativo em Grafana para monitoramento de redes e análise de KPIs em tempo real, permitindo ajuste de capacidade e melhorias de desempenho.</p>
-        <p><strong>Tecnologias:</strong> Grafana, Prometheus</p>
+        <p>Sou especialista em Infraestrutura de TI com foco em Observabilidade e SRE, atuando em empresas de grande porte para garantir a alta disponibilidade e segurança dos sistemas. Tenho experiência na administração de ambientes de TI complexos, incluindo monitoramento de redes, servidores e bancos de dados, utilizando ferramentas como Zabbix, Grafana e Veeam.</p>
     </section>
 
     <section class="content-section">
         <h2>Experiência Profissional</h2>
-        <h3>Especialista em Infraestrutura - Unimed Araraquara</h3>
-        <p><em>Novembro de 2023 - Presente</em></p>
-        <p>Responsável por redes, segurança, virtualização e monitoramento, com foco em confiabilidade e desempenho de serviços.</p>
 
-        <h3>Analista de Infraestrutura Sênior - Unimed Araraquara</h3>
-        <p><em>Março de 2021 - Novembro de 2023</em></p>
-        <p>Supervisão de ambientes virtualizados, implementação de políticas de segurança e monitoramento contínuo de KPIs para análise de desempenho.</p>
+        <div class="experience-item">
+            <h3>Especialista em Infraestrutura - Unimed Araraquara</h3>
+            <p><em>Novembro de 2023 - Presente</em></p>
+            <ul>
+                <li class="section-title">Responsabilidades:</li>
+                <li>Gestão de redes, segurança, virtualização e monitoramento de sistemas críticos.</li>
+                <li>Implementação de soluções de alta disponibilidade e segurança da infraestrutura.</li>
+            </ul>
+        </div>
 
-        <h3>Analista de Infraestrutura Pleno - Unimed Araraquara</h3>
-        <p><em>Setembro de 2018 - Março de 2021</em></p>
-        <p>Administração de redes LAN/WAN, segurança com firewalls e desenvolvimento de dashboards de monitoramento.</p>
+        <div class="experience-item">
+            <h3>Analista de Infraestrutura Sênior - Unimed Araraquara</h3>
+            <p><em>Março de 2021 - Novembro de 2023</em></p>
+            <ul>
+                <li class="section-title">Responsabilidades:</li>
+                <li>Supervisão de ambientes virtualizados e execução de políticas de segurança.</li>
+                <li>Monitoramento contínuo de KPIs e métricas para otimização de desempenho.</li>
+            </ul>
+        </div>
+
+        <div class="experience-item">
+            <h3>Analista de Infraestrutura Pleno - Unimed Araraquara</h3>
+            <p><em>Setembro de 2018 - Março de 2021</em></p>
+            <ul>
+                <li class="section-title">Responsabilidades:</li>
+                <li>Administração de redes LAN/WAN, firewalls e monitoramento de servidores.</li>
+                <li>Desenvolvimento de dashboards e relatórios de monitoramento de desempenho.</li>
+            </ul>
+        </div>
     </section>
 
     <section class="content-section">
-        <h2>Contato</h2>
-        <p><strong>Email:</strong> <a href="mailto:viitor.rebello@live.com">viitor.rebello@live.com</a></p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vitor-rebello/" target="_blank">Vitor Rebello</a></p>
+        <h2>Projetos</h2>
+
+        <div class="project-item">
+            <h3>Implantação Zabbix & Grafana</h3>
+            <p><strong>Associado(s) a:</strong> Unimed Araraquara</p>
+            <p>Iniciado há quatro anos, o projeto evoluiu para atender à demanda de monitoramento em tempo real de mais de 570 hosts, com alertas automáticos e dashboards personalizados.</p>
+            <ul>
+                <li><strong>Bancos de Dados:</strong> Oracle, Progress e SQL Server</li>
+                <li><strong>Servidores:</strong> Windows Server e Linux</li>
+                <li><strong>Equipamentos de Imagem:</strong> Ressonância magnética, tomografia, ultrassom</li>
+                <li><strong>Redes:</strong> Switches, APs, impressoras</li>
+            </ul>
+        </div>
+
+        <div class="project-item">
+            <h3>Instrutor de Curso de Inclusão Digital – Programa Felix</h3>
+            <p>Projeto educacional em parceria com Unimed Araraquara e outras organizações, capacitando alunos em informática básica e reduzindo a exclusão digital.</p>
+        </div>
+
+        <div class="project-item">
+            <h3>Migração Tasy Delphi para Tasy Java</h3>
+            <p>Projeto de migração do sistema Tasy, com foco na implementação do CPOE e modernização contínua utilizando contêineres Docker.</p>
+        </div>
     </section>
-</div>
 
-<footer>
-    <p>&copy; 2024 Vitor Rebello. Todos os direitos reservados.</p>
-</footer>
-
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo de Vitor Rebello</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        h1, h2, h3 {
-            color: #444;
-            border-bottom: 2px solid #f4f4f4;
-        }
-        .section {
-            margin-top: 20px;
-        }
-        .skills, .projects, .education {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
-</head>
-<body>
-
-<div class="container">
-    <h1>Vitor Rebello</h1>
-
-    <section class="section skills">
+    <section class="content-section">
         <h2>Habilidades</h2>
         <ul>
             <li>SRE e Observabilidade (Zabbix e Grafana)</li>
@@ -171,57 +152,44 @@
             <li>Scripts: PowerShell, Python e Shell Script</li>
             <li>Kaspersky Cloud e Bitdefender</li>
             <li>Sistemas Tasy Philips e Totvs Datasul</li>
-            <li>Trabalho em equipe</li>
-            <li>Resolução de problemas</li>
-            <li>Comunicativo</li>
-            <li>Gestão de projetos</li>
-            <li>ITIL4 e ITSM</li>
         </ul>
     </section>
 
-    <section class="section projects">
-        <h2>Projetos</h2>
-        <h3>Implantação Zabbix & Grafana</h3>
-        <p><strong>Associado(s) a:</strong> Unimed Araraquara</p>
-        <p>Iniciado há quatro anos com a versão 4 do Zabbix Server e atualmente na versão 7, o projeto evoluiu para atender à demanda por monitoramento e visibilidade. A infraestrutura abrange mais de 570 hosts, 16.445 itens monitorados e 10.788 triggers, com alertas automáticos via API Bot e e-mail.</p>
-        <ul>
-            <li><strong>Bancos de Dados:</strong> Oracle, Progress e SQL Server</li>
-            <li><strong>Servidores:</strong> Windows Server e Linux</li>
-            <li><strong>Aplicações e Serviços:</strong> Tomcat e serviços essenciais</li>
-            <li><strong>Equipamentos de Imagem:</strong> Ressonância magnética, tomografia, ultrassom, RX e Netpacs Animati</li>
-            <li><strong>Redes:</strong> Switches, APs, impressoras</li>
-            <li><strong>Controle de Temperatura e Nobreak:</strong> Data centers e ambientes críticos</li>
-            <li><strong>Blade Dell Unit e Storage:</strong> Desempenho e integridade</li>
-        </ul>
-        <p>Com dashboards no Grafana, o projeto proporciona visibilidade para análise de KPIs e suporte a decisões estratégicas em tempo real, consolidando-se como uma solução robusta para a continuidade operacional da infraestrutura de TI.</p>
-        
-        <h3>Instrutor de Curso de Inclusão Digital – Programa Felix</h3>
-        <p>Ministrado em parceria com Unimed Araraquara, Unimed Fesp e Lar Escola Redenção, capacitando alunos em informática básica, reduzindo a exclusão digital e melhorando a empregabilidade e participação social.</p>
-
-        <h3>Migração Tasy Delphi para Tasy Java</h3>
-        <p>Projeto de migração do sistema Tasy, atualmente para Tasy HTML5, com foco na implementação do CPOE e uso de contêineres Docker para modernização contínua e facilidade de atualizações no AppManager Philips.</p>
-    </section>
-
-    <section class="section education">
+    <section class="content-section">
         <h2>Formação Acadêmica</h2>
-        <h3>Faculdades Integradas de Araraquara (Faculdades Logatti)</h3>
-        <p>Bacharelado em Sistemas de Informação, jan de 2015 - dez de 2019</p>
-        <ul>
-            <li>Desenvolvimento de Software</li>
-            <li>Gestão de Projetos e Negócios</li>
-            <li>Banco de Dados e Análise de Dados</li>
-            <li>Redes e Segurança da Informação</li>
-        </ul>
 
-        <h3>Senac São Paulo</h3>
-        <p>Curso Técnico Integrado em Tecnologia da Informação, jan de 2011 - nov de 2013</p>
-        <ul>
-            <li>Manutenção de hardware e software</li>
-            <li>Programação e desenvolvimento</li>
-            <li>Suporte técnico e redes</li>
-        </ul>
+        <div class="education-item">
+            <h3>Faculdades Integradas de Araraquara (Faculdades Logatti)</h3>
+            <p>Bacharelado em Sistemas de Informação, jan de 2015 - dez de 2019</p>
+            <ul>
+                <li>Desenvolvimento de Software</li>
+                <li>Gestão de Projetos e Negócios</li>
+                <li>Banco de Dados e Análise de Dados</li>
+                <li>Redes e Segurança da Informação</li>
+            </ul>
+        </div>
+
+        <div class="education-item">
+            <h3>Senac São Paulo</h3>
+            <p>Curso Técnico Integrado em Tecnologia da Informação, jan de 2011 - nov de 2013</p>
+            <ul>
+                <li>Manutenção de hardware e software</li>
+                <li>Programação e desenvolvimento</li>
+                <li>Suporte técnico e redes</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="content-section">
+        <h2>Contato</h2>
+        <p><strong>Email:</strong> <a href="mailto:viitor.rebello@live.com">viitor.rebello@live.com</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vitor-rebello/" target="_blank">Vitor Rebello</a></p>
     </section>
 </div>
+
+<footer>
+    <p>&copy; 2024 Vitor Rebello. Todos os direitos reservados.</p>
+</footer>
 
 </body>
 </html>
