--- a/index.html
+++ b/index.html
@@ -5,44 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
     <style>
-        /* Estilos básicos em linha */
+        /* Estilos gerais */
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
         }
         .container {
             max-width: 900px;
             margin: auto;
             padding: 20px;
         }
-        header, footer {
+
+        /* Estilo para o menu fixo */
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
             text-align: center;
-            padding: 20px 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 15px;
+            border-radius: 5px;
+        }
+        nav ul li a:hover {
+            background-color: #0077b6;
+        }
+
+        /* Estilos para as seções */
+        header {
+            text-align: center;
+            padding: 80px 0 20px 0;
             background-color: #333;
             color: #fff;
         }
-        h1, h2 {
-            color: #333;
-        }
-        h1 {
+        header h1 {
             font-size: 2.5em;
             margin-bottom: 10px;
         }
+        header p {
+            font-size: 1.2em;
+            margin-top: 0;
+        }
+
+        section {
+            margin-top: 80px; /* Ajusta para o menu fixo */
+            margin-bottom: 40px;
+        }
+
         h2 {
-            margin-top: 1em;
+            font-size: 1.8em;
+            margin-top: 20px;
+            color: #333;
             border-bottom: 2px solid #ddd;
             padding-bottom: 5px;
         }
         .content-section {
-            margin-bottom: 20px;
-            padding: 20px;
             background: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            padding: 20px;
+            margin-bottom: 20px;
         }
         ul {
             padding-left: 20px;
@@ -55,37 +97,35 @@
         a:hover {
             color: #0077b6;
         }
-        .section-title {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .experience-item, .education-item {
-            margin-bottom: 15px;
-        }
     </style>
 </head>
 <body>
 
-<header>
+<!-- Menu de navegação -->
+<nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#experiencias">Experiência</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#contato">Contato</a></li>
+    </ul>
+</nav>
+
+<header id="home">
     <h1>Vitor Rebello</h1>
     <p>Especialista em Infraestrutura de TI | SRE | Observabilidade | Segurança da Informação</p>
 </header>
 
 <div class="container">
-    <section class="content-section">
-        <h2>Sobre Mim</h2>
-        <p>Sou especialista em Infraestrutura de TI com foco em Observabilidade e SRE, atuando em empresas de grande porte para garantir a alta disponibilidade e segurança dos sistemas. Tenho experiência na administração de ambientes de TI complexos, incluindo monitoramento de redes, servidores e bancos de dados, utilizando ferramentas como Zabbix, Grafana e Veeam.</p>
-    </section>
-
-    <section class="content-section">
+    <section id="experiencias" class="content-section">
         <h2>Experiência Profissional</h2>
 
         <div class="experience-item">
             <h3>Especialista em Infraestrutura - Unimed Araraquara</h3>
             <p><em>Novembro de 2023 - Presente</em></p>
             <ul>
-                <li class="section-title">Responsabilidades:</li>
-                <li>Gestão de redes, segurança, virtualização e monitoramento de sistemas críticos.</li>
+                <li><strong>Responsabilidades:</strong> Gestão de redes, segurança, virtualização e monitoramento de sistemas críticos.</li>
                 <li>Implementação de soluções de alta disponibilidade e segurança da infraestrutura.</li>
             </ul>
         </div>
@@ -94,8 +134,7 @@
             <h3>Analista de Infraestrutura Sênior - Unimed Araraquara</h3>
             <p><em>Março de 2021 - Novembro de 2023</em></p>
             <ul>
-                <li class="section-title">Responsabilidades:</li>
-                <li>Supervisão de ambientes virtualizados e execução de políticas de segurança.</li>
+                <li><strong>Responsabilidades:</strong> Supervisão de ambientes virtualizados e execução de políticas de segurança.</li>
                 <li>Monitoramento contínuo de KPIs e métricas para otimização de desempenho.</li>
             </ul>
         </div>
@@ -104,14 +143,31 @@
             <h3>Analista de Infraestrutura Pleno - Unimed Araraquara</h3>
             <p><em>Setembro de 2018 - Março de 2021</em></p>
             <ul>
-                <li class="section-title">Responsabilidades:</li>
-                <li>Administração de redes LAN/WAN, firewalls e monitoramento de servidores.</li>
+                <li><strong>Responsabilidades:</strong> Administração de redes LAN/WAN, firewalls e monitoramento de servidores.</li>
                 <li>Desenvolvimento de dashboards e relatórios de monitoramento de desempenho.</li>
             </ul>
         </div>
     </section>
 
-    <section class="content-section">
+    <section id="habilidades" class="content-section">
+        <h2>Habilidades</h2>
+        <ul>
+            <li>SRE e Observabilidade (Zabbix e Grafana)</li>
+            <li>KPIs, SLAs e Métricas de Performance</li>
+            <li>Docker e Kubernetes</li>
+            <li>VMware vSphere</li>
+            <li>DBA (Oracle, Progress, SQL Server)</li>
+            <li>Segurança da Informação</li>
+            <li>Veeam Backup & Replication</li>
+            <li>Windows Server 2012 a 2022</li>
+            <li>Linux Server</li>
+            <li>Scripts: PowerShell, Python e Shell Script</li>
+            <li>Kaspersky Cloud e Bitdefender</li>
+            <li>Sistemas Tasy Philips e Totvs Datasul</li>
+        </ul>
+    </section>
+
+    <section id="projetos" class="content-section">
         <h2>Projetos</h2>
 
         <div class="project-item">
@@ -137,50 +193,7 @@
         </div>
     </section>
 
-    <section class="content-section">
-        <h2>Habilidades</h2>
-        <ul>
-            <li>SRE e Observabilidade (Zabbix e Grafana)</li>
-            <li>KPIs, SLAs e Métricas de Performance</li>
-            <li>Docker e Kubernetes</li>
-            <li>VMware vSphere</li>
-            <li>DBA (Oracle, Progress, SQL Server)</li>
-            <li>Segurança da Informação</li>
-            <li>Veeam Backup & Replication</li>
-            <li>Windows Server 2012 a 2022</li>
-            <li>Linux Server</li>
-            <li>Scripts: PowerShell, Python e Shell Script</li>
-            <li>Kaspersky Cloud e Bitdefender</li>
-            <li>Sistemas Tasy Philips e Totvs Datasul</li>
-        </ul>
-    </section>
-
-    <section class="content-section">
-        <h2>Formação Acadêmica</h2>
-
-        <div class="education-item">
-            <h3>Faculdades Integradas de Araraquara (Faculdades Logatti)</h3>
-            <p>Bacharelado em Sistemas de Informação, jan de 2015 - dez de 2019</p>
-            <ul>
-                <li>Desenvolvimento de Software</li>
-                <li>Gestão de Projetos e Negócios</li>
-                <li>Banco de Dados e Análise de Dados</li>
-                <li>Redes e Segurança da Informação</li>
-            </ul>
-        </div>
-
-        <div class="education-item">
-            <h3>Senac São Paulo</h3>
-            <p>Curso Técnico Integrado em Tecnologia da Informação, jan de 2011 - nov de 2013</p>
-            <ul>
-                <li>Manutenção de hardware e software</li>
-                <li>Programação e desenvolvimento</li>
-                <li>Suporte técnico e redes</li>
-            </ul>
-        </div>
-    </section>
-
-    <section class="content-section">
+    <section id="contato" class="content-section">
         <h2>Contato</h2>
         <p><strong>Email:</strong> <a href="mailto:viitor.rebello@live.com">viitor.rebello@live.com</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vitor-rebello/" target="_blank">Vitor Rebello</a></p>
