--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
             padding: 20px;
         }
 
-        /* Estilo para o menu fixo */
+        /* Estilo para o menu */
         nav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
             background-color: #333;
-            color: #fff;
-            padding: 10px 0;
+            padding: 15px 0;
+            position: sticky;
+            top: 0;
             z-index: 1000;
         }
         nav ul {
@@ -68,7 +65,7 @@
         }
 
         section {
-            margin-top: 80px; /* Ajusta para o menu fixo */
+            margin-top: 60px;
             margin-bottom: 40px;
         }
 
