--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
         a:hover {
             color: #0077b6;
         }
+
+        /* Estilo para o rodapé */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
