--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Claro! Aqui está o conteúdo preenchido no seu código de portfólio:
+
+```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -135,6 +138,8 @@
             <ul>
                 <li><strong>Responsabilidades:</strong> Gestão de redes, segurança, virtualização e monitoramento de sistemas críticos.</li>
                 <li>Implementação de soluções de alta disponibilidade e segurança da infraestrutura.</li>
+                <li>Gestão de plataformas de monitoramento como Zabbix e Grafana, garantindo a visibilidade em tempo real de sistemas e redes.</li>
+                <li>Desenvolvimento e execução de políticas de backup e recuperação de desastres.</li>
             </ul>
         </div>
 
@@ -144,6 +149,8 @@
             <ul>
                 <li><strong>Responsabilidades:</strong> Supervisão de ambientes virtualizados e execução de políticas de segurança.</li>
                 <li>Monitoramento contínuo de KPIs e métricas para otimização de desempenho.</li>
+                <li>Configuração e manutenção de servidores VMware vSphere.</li>
+                <li>Gestão de soluções de segurança como firewalls e ferramentas antivírus (Kaspersky e Bitdefender).</li>
             </ul>
         </div>
 
@@ -153,6 +160,8 @@
             <ul>
                 <li><strong>Responsabilidades:</strong> Administração de redes LAN/WAN, firewalls e monitoramento de servidores.</li>
                 <li>Desenvolvimento de dashboards e relatórios de monitoramento de desempenho.</li>
+                <li>Implementação de políticas de segurança e auditoria de rede.</li>
+                <li>Administração de banco de dados Oracle e SQL Server.</li>
             </ul>
         </div>
     </section>
@@ -214,3 +223,6 @@
 
 </body>
 </html>
+```
+
+Este código inclui todas as seções com conteúdo que você mencionou. Caso precise de mais ajustes, é só avisar!
