--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Claro! Aqui está o conteúdo preenchido no seu código de portfólio:
-
-```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -214,6 +211,7 @@ Claro! Aqui está o conteúdo preenchido no seu código de portfólio:
         <h2>Contato</h2>
         <p><strong>Email:</strong> <a href="mailto:viitor.rebello@live.com">viitor.rebello@live.com</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vitor-rebello/" target="_blank">Vitor Rebello</a></p>
+        <p><strong>Currículo:</strong> <a href="curriculo-vitor-rebello.pdf" download>Baixar Currículo</a></p>
     </section>
 </div>
 
@@ -223,6 +221,3 @@ Claro! Aqui está o conteúdo preenchido no seu código de portfólio:
 
 </body>
 </html>
-```
-
-Este código inclui todas as seções com conteúdo que você mencionou. Caso precise de mais ajustes, é só avisar!
