--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@
         </div>
     </section>
 
-    <section id="contato" class="content-section">
-        <h2>Contato</h2>
-        <p>Se você tiver interesse em entrar em contato, enviar uma mensagem ou baixar meu currículo, clique no link abaixo:</p>
-        <a href="curriculo-vitor-rebello.pdf" class="download-link" download>Baixar Currículo</a>
-    </section>
+<section id="contato" class="content-section">
+    <h2>Contato</h2>
+    <p>Se você tiver interesse em entrar em contato, enviar uma mensagem ou baixar meu currículo, clique no link abaixo:</p>
+    <!-- Alterando o link para a URL bruta do GitHub -->
+    <a href="https://raw.githubusercontent.com/ViitorRebello/my-portfolio/main/Curriculo/Curriculo%20Vitor_Rebello.pdf" class="download-link" download>Baixar Currículo</a>
+</section>
+
 </div>
 
 <footer>
