Certificações Update index.html

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <li><a href="#experiencias">Experiência</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#certificacoes">Certificações</a></li>
         <li><a href="#contato">Contato</a></li>
     </ul>
 </nav>
@@ -228,18 +229,29 @@
         </div>
     </section>
 
-<section id="contato" class="content-section">
-    <h2>Contato</h2>
-    <p>Se você tiver interesse em entrar em contato, enviar uma mensagem ou baixar meu currículo, clique no link abaixo:</p>
-    <!-- Alterando o link para a URL bruta do GitHub -->
-    <a href="https://raw.githubusercontent.com/ViitorRebello/my-portfolio/main/Curriculo/Curriculo%20Vitor_Rebello.pdf" class="download-link" download>Baixar Currículo</a>
-</section>
+    <section id="certificacoes" class="content-section">
+        <h2>Certificações</h2>
 
+        <div class="badge">
+            <h3>Certificação Google Cloud Professional Cloud Architect</h3>
+            <iframe src="https://www.yourbadge.com/xyz" width="200" height="200" title="Google Cloud Professional Cloud Architect"></iframe>
+        </div>
+
+        <div class="badge">
+            <h3>Certificação AWS Certified Solutions Architect</h3>
+            <iframe src="https://www.yourbadge.com/abc" width="200" height="200" title="AWS Certified Solutions Architect"></iframe>
+        </div>
+    </section>
+
+    <section id="contato" class="content-section">
+        <h2>Contato</h2>
+        <p>Para entrar em contato comigo, envie um e-mail para <a href="mailto:vitor.rebello@unimedaraquara.com.br">vitor.rebello@unimedaraquara.com.br</a>.</p>
+    </section>
+
+    <footer>
+        <p>© 2024 Vitor Rebello</p>
+    </footer>
 </div>
-
-<footer>
-    <p>&copy; 2024 Vitor Rebello. Todos os direitos reservados.</p>
-</footer>
 
 </body>
 </html>
