--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#experiencias">Experiência</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#certificacao">Certificações</a></li>
         <li><a href="#projetos">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
     </ul>
@@ -201,6 +202,31 @@
             <li>Sistemas Tasy Philips e Totvs Datasul</li>
         </ul>
     </section>
+
+<section id="certificacao" class="content-section">
+    <h2>Certificações</h2>
+    <ul>
+        <li>
+            <iframe src="https://api.badgr.io/public/assertions/q1uOn9deTnKXSbNEcIAgJA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+                    title="Badge: Desafio Docker" 
+                    style="width: 330px; height: 191px; border: 0px;">
+            </iframe>
+        </li>
+        <li>
+            <iframe src="https://api.badgr.io/public/assertions/OBCvXvOkRUy6mn4NakLXsw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+                    title="Badge: Desafio Kubernetes e AWS" 
+                    style="width: 330px; height: 191px; border: 0px;">
+            </iframe>
+        </li>
+        <li>
+            <iframe src="https://api.badgr.io/public/assertions/pXrp9NVjTFGREbFoeX0GKw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+                    title="Badge: Desafio Pipeline e Monitoramento" 
+                    style="width: 330px; height: 191px; border: 0px;">
+            </iframe>
+        </li>
+    </ul>
+</section>
+
 
     <section id="projetos" class="content-section">
         <h2>Projetos</h2>
