--- a/index.html
+++ b/index.html
@@ -205,27 +205,28 @@
 
 <section id="certificacao" class="content-section">
     <h2>Certificações</h2>
-    <ul>
-        <li>
+    <div class="certification-badges">
+        <div class="certification-badge">
             <iframe src="https://api.badgr.io/public/assertions/q1uOn9deTnKXSbNEcIAgJA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
                     title="Badge: Desafio Docker" 
                     style="width: 330px; height: 191px; border: 0px;">
             </iframe>
-        </li>
-        <li>
+        </div>
+        <div class="certification-badge">
             <iframe src="https://api.badgr.io/public/assertions/OBCvXvOkRUy6mn4NakLXsw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
                     title="Badge: Desafio Kubernetes e AWS" 
                     style="width: 330px; height: 191px; border: 0px;">
             </iframe>
-        </li>
-        <li>
+        </div>
+        <div class="certification-badge">
             <iframe src="https://api.badgr.io/public/assertions/pXrp9NVjTFGREbFoeX0GKw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
                     title="Badge: Desafio Pipeline e Monitoramento" 
                     style="width: 330px; height: 191px; border: 0px;">
             </iframe>
-        </li>
-    </ul>
+        </div>
+    </div>
 </section>
+
 
 
     <section id="projetos" class="content-section">
